# ADAAD-6

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
docs/: ACTION_AUTHORING.md  DESIGN_RATIONALE.md  thesis_traceability.md
src/adaad6/: __init__.py  __main__.py  cli.py  config.py  meta_orchestrator.py
src/adaad6/adapters/: __init__.py  base.py
src/adaad6/assurance/: __init__.py  doctor.py  logging.py
src/adaad6/kernel/: __init__.py  admissibility.py  context.py  failures.py  hashing.py  record.py  schema.py  vectors.py
src/adaad6/planning/: __init__.py  planner.py  registry.py  spec.py  templates.py
src/adaad6/planning/actions/: __init__.py  (+15 more)
src/adaad6/provenance/: __init__.py  hashchain.py  ledger.py
src/adaad6/runtime/: __init__.py  boot.py  executor.py  failure.py  gates.py  health.py
tests/: test_action_scaffold_pipeline.py  test_adapter_logging.py  test_adapter_writes_ledger.py  test_admissibility_vectors.py  test_assurance_logging.py  test_boot.py  test_cli_doctor_report.py  test_cli_ledger_commands.py  test_cli_logging_best_effort.py  test_cli_templates.py  test_config.py  test_config_schema_freeze.py  test_doctor.py  test_executor.py  test_failure_mapping.py  test_failure_taxonomy.py  test_git_diff_and_changelog_actions.py  test_hashchain_integrity.py  test_kernel_context.py  test_ledger_append_only.py  test_ledger_path_anchor.py  test_meta_orchestrator.py  test_mutate_code_action.py  test_planner_golden.py  test_planning_registry.py  test_planning_spec.py  test_planning_templates.py  test_provenance_ledger.py  test_runtime_health.py
(+2 files in other folders)
