[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaad6"
version = "0.0.0"
description = "Credibility-first ADAAD-6 core scaffolding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ADAAD-6" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
